--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,12 +1,12 @@
  <!-- jQuery Version 1.11.0 -->
-    <script src="{{ "/js/jquery.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ site.baseurl }}/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="{{ "/js/jquery.easing.min.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ site.baseurl }}/js/jquery.easing.min.js"></script>
 
 
     <!-- Custom Theme JavaScript -->
-    <script src="{{ "/js/grayscale.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ site.baseurl }}/js/grayscale.js"></script>
