--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,10 +3,10 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About WaterFlow</h2>
-                <p>Waterflow is a project for a water visiualization program, created by students at Linköping University (LiU).</p>
-                <p>The project is part of a course at LiU for the fifth year engineering students.</p>
-                <p>For more details to the project you can check out the <a href="{{ site.git_url }}">GITHUB page</a> or the related <a href="{{ site.git_url }}/wiki">Wiki</a> for more in depth information.</p>
-                <p>If you really want to just check out the code without having to actually look at the code you can check out the <a href="{{ site.url }}/html/index.html">Doxygen site</a>.</p>
+                <p>Waterflow is a project to make a water simulation and visiualization program, made by students at Linköping University (LiU) on the behalf of  <a href="{{ site.scien_url }}">ScienVisic</a></p>
+                <p>The project is part of the course TSBB11 at LiU for the fifth year engineering students.</p>
+                <p>For more details to the project you can check out the <a href="{{ site.git_url }}">GITHUB page</a> and especially the 'Documentation' folder which contains the user manual and technical documentation.</p>
+                <p>If you really want to just check out the code without having to actually look at code you can check out the <a href="{{ site.url }}/html/index.html">Doxygen site</a>.</p>
             </div>
         </div>
     </section>
