--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     {% include nav.html %}
     {% include header.html %}
     {% include about.html %}
+    {% include results.html %}
     {% include download.html %}
     {% include contact.html %}
     {% include map.html %}
