Test add result

--- a/_includes/results.html
+++ b/_includes/results.html
@@ -4,7 +4,7 @@
         <div class="col-lg-8 col-lg-offset-2">
             <h2>Our Results</h2>
             <p>The project resulted in a 2D solution for water visualization in large scale terrains, which simulates and renders in realtime on decent hardware. A visually pleasing water rendering was implemented and the results can be seen below.</p>
-            <img src="{{ site.url }}/img/1.png" alt="Figure 1" style="width:304px;height:228px;">
+            <img src="{{ site.url }}/img/1.png" alt="Figure 1" style="width:304px;height:228px;">            <img src="{{ site.url }}/img/2.png" alt="Figure 2" style="width:304px;height:228px;">            <img src="{{ site.url }}/img/3.png" alt="Figure 3" style="width:304px;height:228px;">
              <p>A full 3D solver was implemented and rejected due to the slowness of the method. The Shallow Water Equations were investigated as a more suitable method for physically based simulation and two different methods were implemented and evaluated on the CPU. The heightfield method presented in the final product is however, unsuitable as a physically based simulation tool as it does not guarantee volume preservation and is very hard to link to physical values in terms of flow etc.</p><iframe width="560" height="315" src="https://www.youtube.com/embed/AcCJroW55KY" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
