--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -138,7 +138,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url({{ site.baseurl }}/img/ourBG.png) no-repeat bottom center scroll;
+    background: url({{ site.baseurl }}/img/ourBG.PNG) no-repeat bottom center scroll;
     background-color: {{ site.color.primary-dark }};
     -webkit-background-size: cover;
     -moz-background-size: cover;
