--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,6 +24,9 @@
                         <a class="page-scroll" href="#results">Results</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#details">Details</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#download">Download</a>
                     </li>
                     <li>
