--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About WaterFlow</h2>
-                <p>Waterflow is a project to make a water simulation and visiualization program, made by students at Linköping University (LiU) on the behalf of  <a href="{{ site.scien_url }}">ScienVisic</a>. The project is part of the course TSBB11 at LiU for the fifth year engineering students.</p>
+                <p>Waterflow is a project to make a water simulation and visiualization program, consisting of students at Linköping University (LiU). The project was issued on the behalf of  <a href="{{ site.scien_url }}">ScienVisic</a> which specializes in . The project is part of the course TSBB11 at LiU for the fifth year engineering students.</p>
                 <p>For more details about the project you can check out our documentation at this <a href="{{ site.git_url }}">GITHUB page</a>, which contains the user manual and technical documentation. Or if you want to have a look the code without having to actually look at code you can check out the <a href="{{ site.url }}/html/index.html">Doxygen site</a>.</p>
             </div>
         </div>
