--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">WaterFlow</h1>
-                        <p class="intro-text">A Project for simulating and visualizing water!</p>
+                        <p class="intro-text">A Project for simulating and visualizing water</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
